--- a/playbook.yml
+++ b/playbook.yml
@@ -1,18 +1,20 @@
 ---
 - name: restart httpd when file update
-  hosts: all
+  hosts: remote
+  become: yes
   tasks:
           - name: copy content
             copy:
-                content: "Ansible Ex447 practice 2nd"
-                dest: /root/ansible447
-            notify: restart_httpd
+                content: "Ansible Ex447"
+                dest: /root/ansibleex447
+            notify: restart_apache
 
   handlers:
-          - name: restart_httpd
-            service:
-                name: httpd
-                state: restarted
-                enabled: yes
+          - name: restart_apache
+            service: 
+              name: httpd
+              state: restarted
+              enabled: yes
+
 
                 
